# IT3708

./: .gitignore
Assignment1/: Cargo.toml  bench.py  bench.sh  envconf  mainqt.py  profile.sh  run.sh  test.sh
Assignment1/data/optimal_solutions/: p02.res
Assignment1/data/solutions/: p01.res
Assignment1/genetic/: Cargo.toml
Assignment1/genetic/src/: config.rs  heuristic.rs  lib.rs  problem.rs  simulation.rs  solution.rs  utils.rs
Assignment1/profiler/: Cargo.toml
Assignment1/profiler/src/: main.rs
Assignment1/src/: config.rs  heuristic.rs  lib.rs  parser.rs  problem.rs  simulation.rs  solution.rs  utils.rs
Assignment2/: Cargo.toml
Assignment2/evaluator/: run.py
Assignment2/src/: app.rs  config.rs  gui.rs  kmeans.rs  main.rs  matrix.rs  segment.rs  simulation.rs  utils.rs
Assignment3/: Cargo.toml  run.sh
Assignment3/data/: 6.txt  7.txt
Assignment3/src/: ant.rs  config.rs  image.rs  main.rs  parser.rs  particle.rs  problem.rs  utils.rs
