[package]
name = "pygenetic"
version = "0.1.0"
authors = ["Martin Simensen <simensen94@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pygenetic"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
genetic = { path = "genetic" }
envconfig_derive = "0.6.0"
envconfig = "0.6.0"

[dependencies.pyo3]
version = "= 0.8.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
