[package]
name = "assignment2"
version = "0.1.0"
authors = ["Martin Simensen <simensen94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cogset = "0.2.0"
envconfig = "0.7.0"
envconfig_derive = "0.7.0"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
glib = "0.9.3"
image = "0.23.0"
lazy_static = "1.4.0"
rand = "0.7.3"

[dependencies.gtk]
gtk = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
gio = "0.8.1"
features = ["v2_44"]
