[package]
name = "assignment3"
version = "0.1.0"
authors = ["Martin Simensen <simensen94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig = "0.8.0"
envconfig_derive = "0.8.0"
lazy_static = "1.4.0"
