[package]
name = "assignment3"
version = "0.1.0"
authors = ["Martin Simensen <simensen94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.8.1", features = ["png"] }
envconfig = "0.8.0"
envconfig_derive = "0.8.0"
lazy_static = "1.4.0"
png = "0.16.1"
rand = "0.7.3"
rayon = "1.3.0"
